--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 VITE_IMAGE_UPLOAD=d78a3e20f08f8ef68cb168539549b957
+
+VITE_apiKey=AIzaSyBvK3KDWAUoiSCW7HCcmPOnOKTTGMx1fQQ
+VITE_authDomain=mediabook-3866d.firebaseapp.com
+VITE_projectId=mediabook-3866d
+VITE_storageBucket=mediabook-3866d.appspot.com
+VITE_messagingSenderId=1062677602579
+VITE_appId=1:1062677602579:web:a611173e89f5d7c35bfae6
+VITE_measurementId=G-9TK57VYHP3
